# toolbox-web

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  fly.toml  justfile  sqlx-data.json
examples/: uuid.rs
migrations/: 20210926014044_create-text.sql
src/: handlers.rs  main.rs  scheduler.rs
src/handlers/: pbkdf2_handler.rs  text_handler.rs
templates/pbkdf2/: index.html
