[package]
name = "toolbox-web"
version = "0.1.0"
authors = ["hamadakafu <kafu.h1998@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "^0.10.0"
actix-rt = "^1.1.1"
actix-web = "3"
actix-web-httpauth = "^0.5.1"
anyhow = "^1.0.0"
chrono = "^0.4.0"
dotenv = "^0.15.0"
reqwest = {version = "^0.11.0", features = ["blocking"]}
sqlx = {version = "^0.4", features = ["runtime-actix-native-tls", "postgres", "macros", "migrate", "offline"]}
serde = {version = "^1", features = ["derive"] }
uuid = {version = "^0.8", features = ["v4"] }
