[package]
name = "toolbox-web"
version = "0.1.0"
authors = ["hamadakafu <kafu.h1998@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "^0.13"
actix-rt = "^2.7"
actix-web = "4"
actix-web-httpauth = "^0.6"
anyhow = "^1"
chrono = "^0.4"
dotenv = "^0.15"
reqwest = { version = "^0.11", features = ["blocking"] }
sqlx = { version = "^0.5", features = [
  "runtime-actix-native-tls",
  "postgres",
  "macros",
  "migrate",
  "offline",
] }
serde = { version = "^1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
tera = "1.8"
pbkdf2 = { version = "0.11", features = ["simple", "sha1"] }

base64-url = "1"
